# Photon

./: CMakeLists.txt  README.md
src/: main.c  mc_server.c  mc_server.h  workercontext.c  workercontext.h
src/bridge/: bridge.c  bridge.h
src/multiplex/: multiplex.h  multiplexdispatcher.c  multiplexworker.c
src/phapi/: phapi.h
src/phapi/event/: event.c  event.h
src/player/: player.c  player.h  uuid.h
src/proxy/: connectionrequest.c  connectionrequest.h  playerconnection.h  proxy.c  proxy.h  proxycontext.h  serverconnection.c  serverconnection.h
src/session/: session.c  session.h  settings.c  settings.h
src/stage/: playerstage.h  serverstage.h  stage.h
src/stage/player/: playerhandshake.c  playerlogin.c  playerplay.c  playerstatus.c
src/stage/server/: serverlogin.c  serverplay.c
src/util/: arraylist.c  arraylist.h  config.c  config.h  conversion.c  conversion.h  hashmap.c  hashmap.h  http.c  http.h  linkedlist.c  linkedlist.h  plugin.c  plugin.h  types.h
